--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>LYGameDemos</title>
+    <title>Egret</title>
     <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="full-screen" content="true" />
@@ -25,7 +25,7 @@
 <body>
     <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
          data-entry-class="Main"
-         data-orientation="portrait"
+         data-orientation="auto"
          data-scale-mode="showAll"
          data-frame-rate="30"
          data-content-width="640"
@@ -85,7 +85,9 @@
                     context.oBackingStorePixelRatio ||
                     context.backingStorePixelRatio || 1;
                 return (window.devicePixelRatio || 1) / backingStore;
-            }});
+                },
+                pro:false
+            });
         });
     });
     xhr.send(null);
